# sbrowser

./: .gitignore  Cargo.toml  untitled.blend
.cargo/: config.toml
src/: genome.rs  hover.rs  main.rs  structs.rs
src/core/: mod.rs  states.rs
src/parsers/: feature.rs  gfa.rs  gff3.rs  mod.rs  plugin.rs
src/utils/: label_placer.rs  mod.rs
src/views/: main_menu.rs  menu_bar.rs  mod.rs  sequence_overview.rs  sequence_view.rs
