[package]
name = "sbrowser"
version = "0.1.0"
authors = ["jguhlin <joseph.guhlin@gmail.com>"]
edition = "2018"

[dependencies]
#bevy = { version = "0.5.0" }
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_egui = "0.6.1"
bevy-inspector-egui = "0.6.1"
bevy_prototype_lyon = "0.3.1"
bevy_flycam = "0.5.1"
bevy_mod_picking = "0.4.0"
clap = "3.0.0-beta.2"
bytelines = "2.2.2"
simdutf8 = "0.1.3"
twox-hash = "1.6.1"
crossbeam = "0.8.1"
rayon = "1.5.1"