[package]
name = "sbrowser"
version = "0.1.0"
authors = ["jguhlin <joseph.guhlin@gmail.com>"]
edition = "2018"

[dependencies]
#bevy = { version = "0.5.0" }
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_egui = "0.8.0"
bevy-inspector-egui = "0.6.1"
#bevy_prototype_lyon = "0.3.1"
bevy_flycam = "0.5.1"
bevy_mod_picking = "0.4.0"
# clap = "3.0.0-beta.4"
bytelines = "2.2.2"
simdutf8 = "0.1.3"
twox-hash = "1.6.1"
crossbeam = "0.8.1"
rayon = "1.5.1"
# bevy_rapier3d = { version = "*", features = [ "wasm-bindgen", "render" ] }
rand = "0.8.0"
rand_xoshiro = "0.6.0"
mimalloc = { version = "*", default-features = false }
jetscii = { version = "0.5.1", features = [ "pattern" ] }
memchr = "2.4.1"
# bevy_polyline = { git = "https://github.com/elfein727/bevy_polyline" }
bevy_prototype_debug_lines = "0.3.2"
